--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>parallax-scrolling-website</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/app.js" defer></script>
 </head>
 <body>
+
+    <header class="main-header">
+        <div class="layers">
+            <div class="layer__header">
+                <div class="layer__caption">Wellcome to Parallax</div>
+                <div class="layer__title">Fairy Forest</div>
+            </div>
+            <div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
+            <div class="layer layers__title" style="background-image: url(img/layer-front.png);"></div>
+            <div class="layer layers__front" style="background-image: url(img/layer-middle.png);"></div>
+        </div>
+     </header>
+
+     <article class="main-article" style="background-image: url(img/dungeon.jpg);">
+        <div class="main-article__content">
+            <h2 class="main-article__header"></h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed praesentium explicabo provident doloremque ipsa similique, vitae consequuntur, voluptates quia consequatur nam beatae blanditiis maiores modi nisi quasi ut obcaecati voluptatibus amet! Dignissimos!</p>
+        </div>
+    <div class="copy"> © WebDising NikolayT</div>
+    </article>
     
 </body>
 </html>
