--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <div class="layer__title">Fairy Forest</div>
             </div>
             <div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
-            <div class="layer layers__title" style="background-image: url(img/layer-front.png);"></div>
-            <div class="layer layers__front" style="background-image: url(img/layer-middle.png);"></div>
+            <div class="layer layers__middle" style="background-image: url(img/layer-middle.png);"></div>
+            <div class="layer layers__front" style="background-image: url(img/layer-front.png);"></div>
         </div>
      </header>
 
