--- a/index.html
+++ b/index.html
@@ -7,29 +7,39 @@
     <title>parallax-scrolling-website</title>
 
     <link rel="stylesheet" href="css/main.css">
+
+    <script src="libs/gsap/gsap.min.js" defer></script>
+    <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
+    <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
+
     <script src="js/app.js" defer></script>
 </head>
 <body>
 
-    <header class="main-header">
-        <div class="layers">
-            <div class="layer__header">
-                <div class="layer__caption">Wellcome to Parallax</div>
-                <div class="layer__title">Fairy Forest</div>
-            </div>
-            <div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
-            <div class="layer layers__middle" style="background-image: url(img/layer-middle.png);"></div>
-            <div class="layer layers__front" style="background-image: url(img/layer-front.png);"></div>
-        </div>
-     </header>
+    <div class="wrapper">
+        <div class="content">
 
-     <article class="main-article" style="background-image: url(img/dungeon.jpg);">
-        <div class="main-article__content">
-            <h2 class="main-article__header"></h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed praesentium explicabo provident doloremque ipsa similique, vitae consequuntur, voluptates quia consequatur nam beatae blanditiis maiores modi nisi quasi ut obcaecati voluptatibus amet! Dignissimos!</p>
+            <header class="main-header">
+                <div class="layers">
+                    <div class="layer__header">
+                        <div class="layer__caption">Wellcome to Parallax</div>
+                        <div class="layer__title">Fairy Forest</div>
+                    </div>
+                    <div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
+                    <div class="layer layers__middle" style="background-image: url(img/layer-middle.png);"></div>
+                    <div class="layer layers__front" style="background-image: url(img/layer-front.png);"></div>
+                </div>
+             </header>
+        
+             <article class="main-article" style="background-image: url(img/dungeon.jpg);">
+                <div class="main-article__content">
+                    <h2 class="main-article__header">to be continued</h2>
+                    <p class="main-article__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed praesentium explicabo provident doloremque ipsa similique, vitae consequuntur, voluptates quia consequatur nam beatae blanditiis maiores modi nisi quasi ut obcaecati voluptatibus amet! Dignissimos!</p>
+                </div>
+            <div class="copy"> © WebDising NikolayT</div>
+            </article>
         </div>
-    <div class="copy"> © WebDising NikolayT</div>
-    </article>
+    </div>
     
 </body>
 </html>
